<resources>
    <string name="app_name">Room Sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_room_sample">Android Architecture Components <br /> Room </string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="mName">Middle Name</string>
    <string name="age">Age</string>
    <string name="department">Department</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="successfully_deleted">Successfully removed</string>
    <string name="successfully_removed_all_employees">Successfully removed all employees</string>

</resources>