<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="updateEmployeeViewModel"
            type="com.example.roomsample.viewmodels.UpdatemployeeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            tools:context=".ui.UpdateEmployeeFragment">

            <!-- TODO: Update blank fragment layout -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/fName"
                android:text="@={updateEmployeeViewModel.fNameUpdated}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/mName"
                android:text="@={updateEmployeeViewModel.mNameUpdated}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/lName"
                android:text="@={updateEmployeeViewModel.lNameUpdated}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/age"
                android:text="@={updateEmployeeViewModel.ageUpdated}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/department"

                android:text="@={updateEmployeeViewModel.departmentUpdated}" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="@{()->updateEmployeeViewModel.updateEmployeeData(saveButton)}"
                android:text="@string/update"
                android:textAllCaps="true" />

        </LinearLayout>
    </ScrollView>
</layout>